Updated api types generated from swagger json of server
